[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[unstable]
build-std = ["std", "panic_abort"]

[build]
target = "wasm32-unknown-unknown"
rustflags = "-Ctarget-feature=+atomics,+bulk-memory,+mutable-globals"

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
stylist = { version = "0.12.0", features = ["yew"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
js-sys = "0.3.61"
winit = "0.28.3"
log = "0.4.17"
wgpu = { version = "0.15", features = ["webgl"]}
rayon = "1.7.0"
rayon-core = "1.5.0"
raytracer = { git = 'https://github.com/alexcrichton/raytracer', branch = 'update-deps' }
futures-channel-preview = "0.3.0-alpha.18"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "HtmlCanvasElement"
]
